--- a/index.html
+++ b/index.html
@@ -38,20 +38,31 @@
     </section>
 
     <section id="sweets">
-        <div class="wrapper gutter-1-2">
+      <div class="wrapper gutter-1-2">
         <h2 class="push-0">Sweets</h2>
-        <figure>
-          <img class="img-flex push" src="images/candy-1.jpg" alt="" aria-describedat="#candy-1">
-          <figcaption>We specialize in sugar-based hard candies made by talented confectioners.</figcaption>
-        </figure>
-        <figure>
-          <img class="img-flex push" src="images/candy-2.jpg" alt="" aria-describedat="#candy-2">
-          <figcaption>We also make specialty hand-made high quality cookies, made to order.</figcaption>
-        </figure>
-        <figure>
-          <img class="img-flex push" src="images/candy-3.jpg" alt="" aria-describedat="#candy-3">
-          <figcaption>Try our infamous hand-made candy covered chocolates! Nobody makes them like we do.</figcaption>
-        </figure>
+        <ul class="grid list-group">
+          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+            <img class="img-flex push" src="images/candy-1.jpg" alt="" aria-describedat="#candy-1">
+            <div class="gutter-1-4" id="hard-candies">
+              <h3>Hard Candies
+              <p>We specialize in sugar-based hard candies made by talented confectioners.</p>
+            </div>
+          </li>
+          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+            <img class="img-flex push" src="images/candy-2.jpg" alt="" aria-describedat="#candy-2">
+            <div class="gutter-1-4" id="cookies">
+              <h3>Specialty Cookies
+              <p>We also make specialty hand-made high quality cookies, made to order.</p>
+            </div>
+          </li>
+          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+            <img class="img-flex push" src="images/candy-3.jpg" alt="" aria-describedat="#candy-3">
+            <div>
+              <h3>Hard Candies
+              <p>Try our infamous hand-made candy covered chocolates! Nobody makes them like we do.</p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
 
