--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <div>
       <h1>Beau's Bon Bons</h1>
     </div>
@@ -29,10 +29,10 @@
   </header>
 
   <main role="banner" id="banner">
-    <section>
+    <div>
       <img src="images/banner.jpg" alt="" aria-describedat="#banner">
     </div>
-    <div>
+    <section class="banner">
       <h2>About us</h2>
       <p>We are a confectionery/bakery specializing in popular candy's for all ages. We pride ourselves in using wholesome ingredients and putting every ounce of talent into every bite you get.</p>
     </section>
@@ -44,21 +44,21 @@
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/candy-1.jpg" alt="" aria-describedat="#candy-1">
             <div class="gutter-1-4" id="hard-candies">
-              <h3>Hard Candies
+              <h3 class="mega push-0">Hard Candies</h3>
               <p>We specialize in sugar-based hard candies made by talented confectioners.</p>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/candy-2.jpg" alt="" aria-describedat="#candy-2">
             <div class="gutter-1-4" id="cookies">
-              <h3>Specialty Cookies
+              <h3 class="mega push-0">Specialty Cookies</h3>
               <p>We also make specialty hand-made high quality cookies, made to order.</p>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/candy-3.jpg" alt="" aria-describedat="#candy-3">
             <div>
-              <h3>Hard Candies
+              <h3 class="mega push-0">Candy Covered</h3>
               <p>Try our infamous hand-made candy covered chocolates! Nobody makes them like we do.</p>
             </div>
           </li>
@@ -106,20 +106,19 @@
     </section>
   </main>
 
-  <footer>
-    <section id="contact">
-      <div>
-        <h2>Contact</h2>
-        <form>
-          <div>
+  <section id="contact" class="contact pad-t pad-b">
+    <div class="wrapper">
+      <h2 class="push-0 color-brand-dark gutter-1-2">Contact</h2>
+        <form class="grid" method="post">
+          <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="name" class="push-1-8">Your name</label>
             <input id="name">
           </div>
-          <div>
+          <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="email" class="push-1-8">Email address</label>
             <input id="email" type="email">
           </div>
-          <div>
+          <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="type" class="push-1-8">Inquiry type</label>
             <select id="type">
               <option>Catering</option>
