--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 
 <body>
   <header class="header grid">
-    <div class="unit xs-1 s-1 m-1-3 l-1-3">
-      <h1>Beau's Bon Bons</h1>
-    </div>
-    <div class="unit xs-1 s-1 m-2-3 l-2-3">
-      <nav role="navigation" class="nav" id="nav">
-        <ol class="mega list-group-inline push-0">
-          <li><a href="#about">About us</a></li>
-          <li><a href="#sweets">Sweets</a></li>
-          <li><a href="#catering">Catering</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ol>
-      </nav>
+    <div class="wrapper">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3">
+        <h1>Beau's Bon Bons</h1>
+      </div>
+      <div class="unit xs-1 s-1 m-2-3 l-2-3 text-right nav-links">
+        <nav role="navigation" class="nav" id="nav">
+          <ol class="mega list-group-inline push-0">
+            <li><a href="#about">About us</a></li>
+            <li><a href="#sweets">Sweets</a></li>
+            <li><a href="#catering">Catering</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ol>
+        </nav>
+      </div>
     </div>
   </header>
 
@@ -43,21 +45,21 @@
       <div class="wrapper gutter-1-2">
         <h2 class="push-0 blue">Sweets</h2>
         <ul class="grid list-group">
-          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ] gutter-1-2">
             <img class="img-flex push" src="images/candy-1.jpg" alt="" aria-describedat="#candy-1">
             <div class="gutter-1-4" id="hard-candies">
               <h3 class="mega push-0">Hard Candies</h3>
               <p>We specialize in sugar-based hard candies made by talented confectioners.</p>
             </div>
           </li>
-          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ] gutter-1-2">
             <img class="img-flex push" src="images/candy-2.jpg" alt="" aria-describedat="#candy-2">
             <div class="gutter-1-4" id="cookies">
               <h3 class="mega push-0">Specialty Cookies</h3>
               <p>We also make specialty hand-made high quality cookies, made to order.</p>
             </div>
           </li>
-          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+          <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ] gutter-1-2">
             <img class="img-flex push" src="images/candy-3.jpg" alt="" aria-describedat="#candy-3">
             <div>
               <h3 class="mega push-0">Candy Covered</h3>
