--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <main role="main" id="main">
     <div>
-      <img class="img-flex" src="images/banner.jpg" alt="" aria-describedat="#banner">
+      <img class="img-flex" src="images/banner.jpg" alt="">
     </div>
     <section class="banner">
       <div class="wrapper">
@@ -46,21 +46,21 @@
         <h2 class="push-0 blue">Sweets</h2>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ] gutter-1-2">
-            <img class="img-flex push" src="images/candy-1.jpg" alt="" aria-describedat="#candy-1">
+            <img class="img-flex push" src="images/candy-1.jpg" alt="">
             <div class="gutter-1-4" id="hard-candies">
               <h3 class="mega push-0">Hard Candies</h3>
               <p>We specialize in sugar-based hard candies made by talented confectioners.</p>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ] gutter-1-2">
-            <img class="img-flex push" src="images/candy-2.jpg" alt="" aria-describedat="#candy-2">
+            <img class="img-flex push" src="images/candy-2.jpg" alt="">
             <div class="gutter-1-4" id="cookies">
               <h3 class="mega push-0">Specialty Cookies</h3>
               <p>We also make specialty hand-made high quality cookies, made to order.</p>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ] gutter-1-2">
-            <img class="img-flex push" src="images/candy-3.jpg" alt="" aria-describedat="#candy-3">
+            <img class="img-flex push" src="images/candy-3.jpg" alt="">
             <div>
               <h3 class="mega push-0">Candy Covered</h3>
               <p>Try our infamous hand-made candy covered chocolates! Nobody makes them like we do.</p>
