--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
   </main>
 
   <footer>
-  <section id="contact" class="contact pad-t pad-b">
-    <div class="wrapper">
-      <h2 class="push-0 blue gutter-1-2">Contact</h2>
+    <section id="contact" class="contact pad-t pad-b">
+      <div class="wrapper">
+        <h2 class="push-0 blue gutter-1-2">Contact</h2>
         <form class="grid" method="post">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="name" class="push-1-8">Your name</label>
@@ -142,3 +142,4 @@
     </section>
   </footer>
 </body>
+</html>
