--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header class="header grid">
+  <header role="banner" class="header grid">
     <div class="wrapper">
       <div class="unit xs-1 s-1 m-1-3 l-1-3">
         <h1>Beau's Bon Bons</h1>
@@ -112,7 +112,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <section id="contact" class="contact pad-t pad-b">
       <div class="wrapper">
         <h2 class="push-0 blue gutter-1-2">Contact</h2>
