--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="#sweets">Sweets</a></li>
             <li><a href="#catering">Catering</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li class="skip-links"><a href="#skip-links">Jump to main content</a></li>
           </ol>
         </nav>
       </div>
