--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2 class="push-0 blue">Sweets</h2>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ] gutter-1-2">
-            <img class="img-flex push" src="images/candy-1.jpg" alt="">
+            <img class="img-flex embed embed-item push" src="images/candy-1.jpg" alt="">
             <div class="gutter-1-4" id="hard-candies">
               <h3 class="mega push-0">Hard Candies</h3>
               <p>We specialize in sugar-based hard candies made by talented confectioners.</p>
