--- a/index.html
+++ b/index.html
@@ -117,18 +117,19 @@
     <section id="contact" class="contact pad-t pad-b">
       <div class="wrapper">
         <h2 class="push-0 blue gutter-1-2">Contact</h2>
-        <form class="grid" method="post">
+
+        <form class="grid" method="post" action="//formspree.io/sydbross@gmail.com">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="name" class="push-1-8">Your name</label>
-            <input id="name">
+            <input id="name" name="flname">
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="email" class="push-1-8">Email address</label>
-            <input id="email" type="email">
+            <input id="email" name="email" type="email">
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="type" class="push-1-8">Inquiry type</label>
-            <select id="type">
+            <select id="type" name="typeofinquiry">
               <option>Catering</option>
               <option>Misc. question</option>
               <option>Allergies</option>
@@ -139,6 +140,7 @@
             <button class="btn mega" type="submit">Send</button>
           </div>
         </form>
+        
       </div>
     </section>
   </footer>
