--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="wrapper">
         <h2 class="push-0 blue gutter-1-2">Contact</h2>
 
-        <form class="grid" method="post" action="//formspree.io/sydbross@gmail.com">
+        <form class="grid" method="post" action="formspree.io/sydbross@gmail.com">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="name" class="push-1-8">Your name</label>
             <input id="name" name="flname">
@@ -140,7 +140,7 @@
             <button class="btn mega" type="submit">Send</button>
           </div>
         </form>
-        
+
       </div>
     </section>
   </footer>
