--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
 <body>
   <header role="banner" class="header grid">
-    <div class="wrapper">
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 embed embed-item">
+    <div class="wrapper embed embed-item">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3">
         <h1>Beau's Bon Bons</h1>
       </div>
       <div class="unit xs-1 s-1 m-2-3 l-2-3 text-right nav-links">
         <nav role="navigation" class="nav" id="nav">
           <ol class="mega list-group-inline push-0">
-            <li><a href="#about">About us</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#sweets">Sweets</a></li>
             <li><a href="#catering">Catering</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li class="skip-links"><a href="#skip-links">Jump to main content</a></li>
+            <li><a href="#skip-links" class="skip-links">Jump to main content</a></li>
           </ol>
         </nav>
       </div>
@@ -35,7 +35,7 @@
     <div>
       <img class="img-flex" src="images/banner.jpg" alt="">
     </div>
-    <section class="banner">
+    <section class="banner" id="about">
       <div class="wrapper">
         <h2 class="pink">About us</h2>
         <p class="pink-p">We are a confectionery/bakery specializing in popular candy's for all ages. We pride ourselves in using wholesome ingredients and putting every ounce of talent into every bite you get.</p>
@@ -117,8 +117,7 @@
     <section id="contact" class="contact pad-t pad-b">
       <div class="wrapper">
         <h2 class="push-0 blue gutter-1-2">Contact</h2>
-
-          <form class="grid" method="POST" action="formspree.io/sydbross@gmail.com">
+        <form class="grid" method="POST" action="formspree.io/sydbross@gmail.com">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label for="name" class="push-1-8">Your name</label>
             <input id="name" name="name">
